# nixpkgs-updaters-library

./: .coveragerc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  flake.nix  mkdocs.yml  package.nix  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  test.yml  validation.yml
docs/: Makefile  conf.py  index.rst  terminologie.md  terminology.md  todo.md
docs/pages/: terminology.rst
docs/usage/: advanced.rst  miscellaneous.rst  models.md  models.rst  quick-start.md  quick-start.rst
docs/usage/design/: logic.md
docs/usage/fetchers/: nix-prefetch-git.rst  nurl.rst
docs/usage/helpers/: csv-reader.md  csv-reader.rst  git.rst  github.md  github.rst  nix-prefetch-git.md  nix-prefetch-github.rst  nix-prefetch-url.md  nix-prefetch-url.rst  nurl.md  nurl.rst  recipes.rst
example/: input.txt  output.json  script.py
example/simple/: input.csv  input.txt  output.json  script.py
example/vim-plugins/: README.md  input.csv  output.json  script.py
nix/: joblib-stubs.nix  mkdocs-github-admonitions-plugin.nix  overlay.nix  package.nix  python-inject.nix  python-loguru.nix  python-nbdb.nix
nix/lint-hook/: lint-hook.nix  lint-hook.sh
nupd/: __init__.py  base.py  cache.py  cli.py  cli1.py  exc.py  executables.py  format_signature.py  injections.py  logging.py  logs.py  models.py  shutdown.py  utils.py
nupd/fetchers/: github.py  nix_prefetch.py  nix_prefetch_git.py  nix_prefetch_github.py  nix_prefetch_url.py  nurl.py
nupd/fetchers/github/: __init__.py  _auto_fetch.py  _fetchers.py  _models.py  _recipy.py  _versioning.py
nupd/fetchers/nix_prefetch_git/: __init__.py  _fetcher.py  _recipy.py
nupd/helpers/: __init__.py  git.py  recipy.py
nupd/inputs/: base.py  csv.py
src/: __init__.py
tests/: conftest.py  test_cache.py  test_models.py  test_nupd_base.py  test_utils.py
tests/fetchers/: test_nix_prefetch.py  test_nix_prefetch_git.py  test_nix_prefetch_github.py  test_nix_prefetch_url.py  test_nurl.py
tests/fetchers/github/: test_auto.py  test_graphql.py  test_other.py  test_recipy.py  test_rest.py  test_versioning.py
tests/fetchers/github/responses/: graphql_404.json  graphql_archived.json  graphql_lspconfig.json  latest_release.json  prefetch_commit.json  rest_archived.json  rest_lspconfig.json  tags.json
tests/fetchers/nix_prefetch_git/: test_fetcher.py  test_recipy.py
tests/helpers/: test_git.py
tests/inputs/: test_csv.py
tests/test_add_update_cmd/: __init__.py  models.py  test_add.py  test_update.py
