[project]
name = "nixpkgs-updaters-library"
description = "A boilerplate-less updater for Nixpkgs ecosystems"
version = "0.1.0"
authors = [
  { name = "Perchun Pak}", email = "pypi@perchun.it" },
]


[tool.setuptools]
packages = [ "nupd" ]


[tool.basedpyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
typeCheckingMode = "all"

# Diagnostic behavior settings
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
analyzeUnannotatedFunctions = false
strictParameterNoneValue = true
deprecateTypingAliases = true      # only applies up to pythonVersion
enableExperimentalFeatures = false
disableBytesTypePromotions = true

# Diagnostic rules
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = true
reportUnreachable = "information"
reportUnknownArgumentType = false
reportUnknownVariableType = true
reportUnknownMemberType = false
reportUnknownParameterType = true
reportUnknownLambdaType = true
reportMissingTypeStubs = "information"
reportUninitializedInstanceVariable = true
reportMissingParameterType = false # ruff's flake8-annotations (ANN) already covers this + gives us more control
reportImportCycles = false # tests catch that


[tool.ruff]
line-length = 80


[build-system]
build-backend = 'setuptools.build_meta'
requires = [ 'setuptools' ]
